feat: added config and endpoint for active types
